--- a/java-terminal/.vscode/launch.json
+++ b/java-terminal/.vscode/launch.json
@@ -8,23 +8,26 @@
 
         {
             "type": "java",
-            "name": "Launch SobreMim",
-            "request": "launch",
-            "mainClass": "SobreMim",
-            "projectName": "java-terminal_6738f6"
-        },
-        {
-            "type": "java",
-            "name": "Launch Current File",
-            "request": "launch",
-            "mainClass": "${file}"
-        },
-        {
-            "type": "java",
             "name": "Launch MinhaClasse",
             "request": "launch",
             "mainClass": "MinhaClasse",
             "projectName": "java-terminal_6738f6"
+        },
+
+        
+        {
+            "name": "Launch SobreMim",
+            "type": "java",
+            "request": "launch",
+            "mainClass": "SobreMim",
+            "args": [
+                "Viviane",
+                "DSC",
+                "38",
+                "1.64"
+            ]
         }
+
+
     ]
 }
